--- a/components/genseqAmostras/amostras.html
+++ b/components/genseqAmostras/amostras.html
@@ -26,7 +26,7 @@
 							</tr>
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_projetos | filter:vm.filtro_projeto">
-							<tr ng-click="vm.edit_registro_adm($index)">
+							<tr ng-click="vm.edit_registro_adm(registro)">
 								<td>{{registro.nome}}</td>
 								<td>{{registro.descricao}}</td>
 								<td>{{registro.instituicao.nome}}</td>
@@ -59,7 +59,7 @@
 							</tr>
 						</thead>
 						<tbody ng-repeat="registro in vm.lista_projetos">
-							<tr ng-click="vm.edit_registro($index)">
+							<tr ng-click="vm.edit_registro(registro)">
 								<td>{{registro.nome}}</td>
 								<td>{{registro.descricao}}</td>
 								<td>{{registro.instituicao.nome}}</td>
